--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,8 +1,7 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-plotly
-scikit-learn
-scipy
+pandas==1.5.3
+numpy==1.23.5
+matplotlib==3.6.0
+seaborn==0.12.1
+plotly==5.11.0
+scikit-learn==1.2.0
+scipy==1.10.0
