--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pandas==1.5.3
-numpy==1.23.5
-matplotlib==3.6.0
-seaborn==0.12.1
-plotly==5.11.0
-scikit-learn==1.2.0
-scipy==1.10.0
+streamlit==1.26.0
+pandas==2.0.3
+numpy==1.24.2
+plotly==5.13.1
+scikit-learn==1.2.2
+scipy==1.11.1
+
