--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.26.0
-pandas==2.0.3
-numpy==1.24.2
-plotly==5.13.1
-scikit-learn==1.2.2
-scipy==1.11.1
-
+streamlit
+pandas
+numpy
+plotly
+scikit-learn
+scipy
